--- a/WebAPIDemo/Web.config
+++ b/WebAPIDemo/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DBCS" connectionString="Provider=SQLOLEDB.1;Password=customer;Persist Security Info=True;User ID=sa;Initial Catalog=FlexiCadastre_Dev;Data Source=SDRSA02\SQL2014EXPRESS" providerName="System.Data.SqlClient"/>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebAPIDemo-20170214042158.mdf;Initial Catalog=aspnet-WebAPIDemo-20170214042158;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DBCS" connectionString="Provider=SQLOLEDB.1;Password=customer;Persist Security Info=True;User ID=sa;Initial Catalog=FlexiCadastre_Dev;Data Source=SDRSA02\SQL2014EXPRESS" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-WebAPIDemo-20170214042158.mdf;Initial Catalog=aspnet-WebAPIDemo-20170214042158;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
@@ -22,7 +22,8 @@
     </httpModules>
   </system.web>
   <system.webServer>
-    <modules>
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule"/>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
@@ -31,7 +32,7 @@
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,POST,PUT,DELETE" type="System.Web.Handlers.TransferRequestHandler" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
